# Operational-Systems

./: .gitattributes  .gitignore
MultiThreading-Company/: CMakeLists.txt  README.md  common.h  progtest_solver.h  sample_tester.cpp  sample_tester.h  solution.cpp
mini-FileSystem/: CMakeLists.txt  README.md  a.out  main  main.cpp  simple_test.inc
